# SignalPilot

./: .env.example  .gitignore  CLAUDE.md  PRD_Intraday_Signal_Generator.md  PRD_Phase2_ORB_VWAP.md  PRD_Phase3_Hybrid_Dashboard.md  PRD_Phase4_Intelligence_Layer.md  PRD_Phase4_Market_Regime_Detection.md  PRD_Phase4_News_Sentiment_Filter.md  README.md  pyproject.toml  signalpilot.db  signalpilot.db-shm  signalpilot.db-wal
backend/: .env.example  pyproject.toml
backend/data/: earnings_calendar.csv  nifty500_list.csv
backend/log/: signalpilot.log.2026-02-20  signalpilot.log.2026-02-21
backend/scripts/: __main__.py  test_harness.py
backend/signalpilot/: config.py  events.py  main.py
backend/signalpilot/backtest/: paper_report.py  runner.py
backend/signalpilot/dashboard/: app.py  deps.py  schemas.py
backend/signalpilot/data/: auth.py  historical.py  instruments.py  market_data_store.py  websocket_client.py
backend/signalpilot/db/: adaptation_log_repo.py  circuit_breaker_repo.py  database.py  earnings_repo.py  hybrid_score_repo.py  metrics.py  models.py  news_sentiment_repo.py  regime_performance_repo.py  regime_repo.py  signal_action_repo.py  signal_repo.py  strategy_performance_repo.py  watchlist_repo.py
backend/signalpilot/intelligence/: __init__.py  earnings.py  financial_lexicon.json  morning_brief.py  news_fetcher.py  news_sentiment.py  regime_classifier.py  regime_data.py  sentiment_engine.py
backend/signalpilot/monitor/: adaptive_manager.py  circuit_breaker.py  duplicate_checker.py  (+1 more)
backend/tests/: conftest.py  test_config.py  test_events.py
(+414 files in other folders)
