[project]
name = "signalpilot"
version = "0.1.0"
description = "Intraday signal generation tool for Indian equity markets (NSE)"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "smartapi-python>=1.5",
    "logzero>=1.7",
    "websocket-client>=1.6",
    "pyotp>=2.9",
    "python-telegram-bot>=22.0",
    "apscheduler>=3.10,<4.0",
    "aiosqlite>=0.19",
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["signalpilot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
